==> portapack-mayhem/mayhem-firmware/firmware/chibios-portapack/os/hal/platforms/LPC43xx/adc_lld.c <==
#include "ch.h"
#include "hal.h"

void adc_lld_init(void) {

#if LPC43XX_ADC_USE_ADC0
  /* Driver initialization.*/
  adcObjectInit(&ADCD0);
  /* TODO: Implement */
  ADCD0.adc = LPC_ADC0;
  ADCD0.resources = &adc0_resources;
#endif /* LPC43XX_ADC_USE_ADC0 */

#if LPC43XX_ADC_USE_ADC1
  /* Driver initialization.*/
  adcObjectInit(&ADCD1);
  /* TODO: Implement */
  ADCD1.adc = LPC_ADC1;
  ADCD1.resources = &adc1_resources;
#endif /* LPC43XX_ADC_USE_ADC1 */
}

void adc_lld_start(ADCDriver *adcp) {

  if (adcp->state == ADC_STOP) {
    /* Enables the peripheral.*/
    base_clock_enable(&adcp->resources->base);
    branch_clock_enable(&adcp->resources->branch);
    peripheral_reset(&adcp->resources->reset);
    interrupt_enable(&adcp->resources->interrupt);

    /* Configures the peripheral.*/
    adcp->adc->CR =
        (0x00 << 0)
      | (adcp->config->cr_clkdiv << 8)
      | (0 << 16)
      | (adcp->config->cr_clks << 17)
      | (1 << 21)
      | (0 << 24)
      | (0 << 27)
      ;
  }
}

void adc_lld_stop(ADCDriver *adcp) {

  if (adcp->state == ADC_READY) {
    /* Resets the peripheral.*/
    /* Reset START to 0x0, power down. */
    adcp->adc->CR =
        (0x00 << 0)
      | (adcp->config->cr_clkdiv << 8)
      | (0 << 16)
      | (adcp->config->cr_clks << 17)
      | (0 << 21)
      | (0 << 24)
      | (0 << 27)
      ;

    /* Disables the peripheral.*/
    interrupt_disable(&adcp->resources->interrupt);
    peripheral_reset(&adcp->resources->reset);
    branch_clock_disable(&adcp->resources->branch);
    base_clock_disable(&adcp->resources->base);
  }
}

void adc_lld_start_conversion(ADCDriver *adcp) {
  const ADCConversionGroup *grpp = adcp->grpp;

  adcp->adc->CR =
      (grpp->cr_sel << 0)
    | (adcp->config->cr_clkdiv << 8)
    | (0 << 16)
    | (adcp->config->cr_clks << 17)
    | (1 << 21)
    | (1 << 24)
    | (0 << 27)
    ;
}

void adc_lld_stop_conversion(ADCDriver *adcp) {
    adcp->adc->CR =
        (0x00 << 0)
      | (adcp->config->cr_clkdiv << 8)
      | (0 << 16)
      | (adcp->config->cr_clks << 17)
      | (1 << 21)
      | (0 << 24)
      | (0 << 27)
      ;
}
